Fix nav content jumping

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -36,6 +36,11 @@
 
 @tailwind utilities;
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 .nav-padding {
   @apply px-md md:px-lg lg:px-2xl;
 }
